--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ h2 {
 }
 
 #preloader {
-  background: #410a54 url(asset/loader1.gif) no-repeat center;
+  background: #410a54 url(asset/726-ice-cream-animation.gif) no-repeat center;
   height: 100vh;
   width: 100%;
 }
